Update config format

--- a/AutoClickerGui/set.cfg
+++ b/AutoClickerGui/set.cfg
@@ -3,6 +3,12 @@ bindRight@5;
 bindstop@117;
 dcLeft@0;
 dcRight@0;
-delLeft@20;
+delLeft@50;
 delRight@10;
 enabled@0;
+rndLeft@1;
+rndRight@0;
+rnddLeft@0;
+rnddRight@0;
+rnduLeft@30;
+rnduRight@0;
