--- a/AutoClickerGui/AutoClickerGui.vcxproj
+++ b/AutoClickerGui/AutoClickerGui.vcxproj
@@ -132,6 +132,9 @@
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AboutDialog.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="fw.h" />
     <ClInclude Include="KeyElem.h" />
     <ClInclude Include="KeyPicker.h">
@@ -144,6 +147,7 @@
     <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AboutDialog.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="CppCLR_WinFormsProject.cpp" />
     <ClCompile Include="fw.cpp" />
@@ -168,6 +172,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AboutDialog.resx">
+      <DependentUpon>AboutDialog.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="KeyPicker.resx">
       <DependentUpon>KeyPicker.h</DependentUpon>
     </EmbeddedResource>
